# Azel

./: .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  PDS.sln  README.md  build_linux.sh  vs2022.bat  vs2026.bat
AzelLib/: 3dEngine.cpp  3dEngine.h  3dEngine_flush.cpp  3dEngine_flush.h  3dEngine_textureCache.cpp  3dEngine_textureCache.h  3dModels.cpp  3dModels.h  CMakeLists.txt  LCS.cpp  LCS.h  PDS.cpp  PDS.h  PDS.vcxproj  PDS.vcxproj.filters  PDS_Logger.cpp  PDS_Logger.h  PDS_Precompiled.cpp  VDP1.cpp  VDP1.h  VDP2.cpp  VDP2.h  collision.cpp  collision.h  common.cpp  common.h  commonOverlay.cpp  commonOverlay.h  common_generated.cpp  debugWindows.cpp  debugWindows.h  dragonData.cpp  dragonData.h  dragonMorphing.cpp  dragonMorphing.h  dragonRider.cpp  dragonRider.h  dummy.cpp  dummy.h  field.cpp  (+35 more)
AzelLib/audio/: SCSP_wavStream.cpp  SCSP_wavStream.h  audioDebug.cpp  audioDebug.h  pcmPlayer.cpp  pcmPlayer.h  soundDataTable.cpp  soundDataTable.h  soundDriver.cpp  soundDriver.h  systemSounds.cpp  systemSounds.h
AzelLib/battle/: battleBerserkScrollEffect.cpp  battleBerserkScrollEffect.h  battleCommandMenu.cpp  battleCommandMenu.h  battleDamageDisplay.cpp  battleDamageDisplay.h  battleDamageNumber.cpp  battleDamageNumber.h  battleDebris.cpp  battleDebris.h  battleDebug.cpp  battleDebug.h  battleDebugList.cpp  battleDebugList.h  battleDragon.cpp  battleDragon.h  battleEnd.cpp  battleEnd.h  battleEnemyLifeMeter.cpp  battleEnemyLifeMeter.h  battleEnemyModels.cpp  battleEnemyModels.h  battleEngine.cpp  battleEngine.h  battleEngineSub0.cpp  battleEngineSub0.h  battleEngineSub1.cpp  battleEngineSub1.h  battleFormation.cpp  battleFormation.h  battleFormationBase.cpp  battleFormationBase.h  battleFormationIntroEffect.cpp  battleFormationIntroEffect.h  battleGenericData.cpp  battleGenericData.h  battleGrid.cpp  battleGrid.h  battleHpAndBpDisplay.cpp  battleHpAndBpDisplay.h  (+53 more)
AzelLib/battle/BTL_A3/: BTL_A3.cpp  BTL_A3.h  BTL_A3_2.cpp  BTL_A3_2.h  BTL_A3_2_data.cpp  BTL_A3_BaldorFormation.cpp  BTL_A3_BaldorFormation.h  BTL_A3_BaldorQueenFormation.cpp  BTL_A3_Env.h  (+27 more)
AzelLib/field/: battleStart.cpp  battleStart.h  dragonLightWingEvolution.cpp  dragonLightWingEvolution.h  exitField.cpp  exitField.h  fieldAnimRingSubTask.cpp  fieldAnimRingSubTask.h  fieldBeamSpark.cpp  fieldBeamSpark.h  fieldCutsceneTask.cpp  fieldCutsceneTask.h  fieldCutsceneTask2.cpp  fieldCutsceneTask2.h  fieldCutsceneTask3.cpp  fieldCutsceneTask3.h  fieldDebrisScatter.cpp  fieldDebrisScatter.h  fieldDialog.cpp  fieldDialog.h  fieldDragon.cpp  fieldDragon.h  fieldDragonInput.cpp  fieldDragonInput.h  fieldDragonMovement.cpp  fieldDragonMovement.h  fieldEncounterTask.cpp  fieldEncounterTask.h  fieldHorizon.cpp  fieldHorizon.h  fieldItemBox.cpp  fieldItemBox.h  fieldItemBoxDefinition.cpp  fieldItemBoxDefinition.h  fieldItemBox_type0.cpp  fieldItemBox_type0.h  fieldItemBox_type1.cpp  fieldItemBox_type1.h  fieldItemBox_type2.cpp  fieldItemBox_type2.h  (+13 more)
AzelLib/kernel/: animation.cpp  animation.h  cinematicBarsTask.cpp  cinematicBarsTask.h  dialogTask.cpp  dialogTask.h  fade.cpp  fade.h  fileBundle.cpp  fileBundle.h  flagEditor.cpp  flagEditor.h  graphicalObject.cpp  graphicalObject.h  grid.cpp  grid.h  loadSavegameScreen.cpp  loadSavegameScreen.h  loadTask.cpp  menuCursor.cpp  menuCursor.h  menuSprite.cpp  menuSprite.h  moduleManager.cpp  moduleManager.h  monsterPart.cpp  monsterPart.h  rayDisplay.cpp  rayDisplay.h  receiveItemTask.cpp  receiveItemTask.h  textDisplay.cpp  textDisplay.h  vdp1Allocator.cpp  vdp1Allocator.h  vdp1AnimatedQuad.cpp  vdp1AnimatedQuad.h  worldGrid.cpp  worldGrid.h
AzelLib/menu/: inventoryMenu.cpp  inventoryMenu.h
AzelLib/movie/: cinepak.cpp  cinepak.h  movie.cpp  movie.h  movieAudio.cpp  movieAudio.h
AzelLib/renderer/: renderer.h  renderer_gl.cpp  renderer_gl.h  renderer_vk.cpp  renderer_vk.h
AzelLib/shaders/: VDP1.varying.def.sc  VDP1_2dUIVertexColor_ps.sc  VDP1_2dUIVertexColor_vs.sc  VDP1_2dUI_ps.sc  VDP1_2dUI_vs.sc  VDP1_ps.sc  VDP1_vertexColor_ps.sc  VDP1_vertexColor_vs.sc  VDP1_vs.sc  VDP1_worldTextured_ps.sc  VDP1_worldTextured_vs.sc  VDP2_RBG0_dual_ps.sc  VDP2_RBG0_ps.sc  VDP2_blit_ps.sc  VDP2_blit_vdp1_ps.sc  VDP2_blit_vs.sc  VDP2_composite_ps.sc  VDP2_ps.glsl  VDP2_ps.sc  VDP2_vs.glsl  VDP2_vs.sc  VDP2_vs.varying.def.sc  embeddedShadersMacro.h  shaders.cpp
AzelLib/shared/: vdp2PlaneTask.cpp  vdp2PlaneTask.h
AzelLib/town/: collisionBody.cpp  collisionBody.h  collisionRegistry.cpp  collisionRegistry.h  excaEntity.cpp  excaEntity.h  town.cpp  town.h  townCamera.cpp  townCamera.h  townCutscene.cpp  townCutscene.h  townDebugSelect.cpp  townDebugSelect.h  townDragon.cpp  townDragon.h  townEdge.cpp  townEdge.h  townLCS.cpp  townLCS.h  townMainLogic.cpp  townMainLogic.h  townScript.cpp  townScript.h  townScriptDecompiler.cpp  townScriptDecompiler.h
AzelLib/worldmap/: worldmap.cpp  worldmap.h
PDS/: 3dEngine.cpp  3dEngine.h  3dEngine_flush.cpp  3dEngine_flush.h  3dEngine_textureCache.cpp  3dEngine_textureCache.h  3dModels.h  CMakeLists.txt  LCS.cpp  LCS.h  PDS.cpp  PDS.h  PDS.vcxproj  PDS.vcxproj.filters  PDS_Logger.cpp  PDS_Logger.h  VDP1.cpp  VDP1.h  VDP2.cpp  VDP2.h  common.cpp  common.h  common_generated.cpp  dummy.cpp  dummy.h  field.cpp  field.h  fixedPoint.cpp  fixedPoint.h  heap.cpp  heap.h  mainMenuDebugTasks.cpp  mainMenuDebugTasks.h  menu_dragon.cpp  menu_dragon.h  menu_dragonMorph.cpp  menu_dragonMorph.h  o_fld_a3.cpp  o_fld_a3.h  o_fld_a3_1.cpp  (+13 more)
PDS/PDS_Tool/: PDS_Tool.cpp  PDS_Tool.vcxproj  PDS_Tool.vcxproj.filters
PDS/imgui/: imgui_draw.cpp
PDS/kernel/: receiveItemTask.cpp  receiveItemTask.h
PDS/validation/: MailboxConnection.cpp  MailboxConnection.h  interception.h  validation.cpp  validation.h  validationHooks.cpp  validationHooks_math.cpp  validationHooks_math.h  validationHooks_town.cpp  validationHooks_town.h  validation_mailbox.hpp
PDS_Tool/: CMakeLists.txt  PDS_Tool.cpp  PDS_Tool.vcxproj  PDS_Tool.vcxproj.filters  imgui_memory_editor.h  json.hpp  overlay.cpp  overlay.h  sh2dasm.cpp  sh2dasm.h
PDS_WatchOS/: CMakeLists.txt  PDS.cpp  PDS.m
(+269 files in other folders)
